--- a/package.json
+++ b/package.json
@@ -4,27 +4,31 @@
     "description": "Djula.AI - WhatsApp E-commerce Platform",
     "main": "src/index.ts",
     "scripts": {
-      "dev": "nodemon src/index.ts",
-      "build": "tsc",
-      "start": "node dist/index.js"
+        "dev": "nodemon src/index.ts",
+        "build": "tsc",
+        "start": "node dist/index.js"
     },
     "dependencies": {
-      "@supabase/supabase-js": "2.39.0",
-      "axios": "^1.6.2",
-      "dotenv": "16.3.1",
-      "express": "4.18.2",
-      "openai": "^4.20.0",
-      "qrcode": "1.5.3"
+        "@supabase/supabase-js": "2.39.0",
+        "@types/bcrypt": "^5.0.2",
+        "axios": "^1.6.2",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "node-fetch": "^3.3.2",
+        "openai": "^4.86.2",
+        "qrcode": "1.5.3",
+        "supabase": "^2.15.8"
     },
     "devDependencies": {
-      "@types/express": "4.17.21",
-      "@types/node": "20.10.0",
-      "@types/qrcode": "1.5.5",
-      "nodemon": "^3.0.1",
-      "ts-node": "10.9.2",
-      "typescript": "5.3.2"
+        "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/node": "^20.17.24",
+        "@types/qrcode": "1.5.5",
+        "nodemon": "^3.0.1",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.8.2"
     },
     "keywords": [],
     "author": "",
     "license": "ISC"
-  }
+}
